# Ico-Octree

./: CMakeLists.txt
src/: datasettingvisitor.cpp  datasettingvisitor.h  face.cpp  face.h  icosphere.cpp  icosphere.h  main.cpp  vector3.cpp  vector3.h
